--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,11 +1,11 @@
 spring:
   data:
     mongodb:
-      host: mongodb
+      host: localhost
       auto-index-creation: true
 
 kafka:
   enabled: true
-  bootstrap-address: kafka:29092
+  bootstrap-address: localhost:9092
   order-statistic-topic: user-order-statistics
   group-id: book-retail
