Add and configure security, jwt dependencies

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,3 +9,7 @@ kafka:
   bootstrap-address: localhost:9092
   order-statistic-topic: user-order-statistics
   group-id: book-retail
+
+jwt:
+  secretKey: {JWT_SECRETKEY}
+  expiryInMs: {JWT_EXPIRYINMS:3600000}
